--- a/Canvas/index.html
+++ b/Canvas/index.html
@@ -8,9 +8,14 @@
 <body>
 	<img src="img/пришелец.png" id="alien__img" class="hide">
 	<div class="screen__center" id="screen">
+		
 		<div id="bg_second"></div>
+		
 		<div id="main__screen">
+
 			<h1 id="header">Space Invaders</h1>
+
+			<!-- Instruction -->
 			<div id="instruction">
 				<ul id="description">
 					<li>Choose a space ship</li>
@@ -33,11 +38,18 @@
     				<span>START</span>
   				</div>
  			</a>
+
 		</div>
 	</div>
 
 	<div class="screen_center" id="ship">
 		
+	</div>
+
+	<div id="heart__pos" class="hide">
+		<img src="../Canvas/img/heart.png"name="heart">
+		<img src="../Canvas/img/heart.png"name="heart">
+		<img src="../Canvas/img/heart.png" name="heart">
 	</div>
 
 	<canvas id="canvas" width="600" height="400" class="hide"></canvas>
