--- a/Canvas/index.html
+++ b/Canvas/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<img src="img/пришелец.png" id="alien__img" class="hide">
