--- a/Vue/lesson13/index.html
+++ b/Vue/lesson13/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 	
+	<div id="app">
+		<input type="checkbox" v-model="isActive" v-on:click="changeColor">
+		<p v-bind:style="{color: color1}">Какой-то текст</p>
+	</div>
 
 	<script src="vue.js"></script>
 	<script src="script.js"></script>
