--- a/Vue/lesson10/index.html
+++ b/Vue/lesson10/index.html
@@ -7,24 +7,41 @@
 <body>
 
 	<!-- Task 2 -->
-	<dvi id="app1">
-		
-	</dvi>
-
+	<div id="app1">
+		<h3>Task 2</h3>
+		<textarea cols="30" rows="10" v-model="text"></textarea>
+		<button v-on:click="getArr">Получить массив</button>
+		<ul>
+			<li v-for="item in items">{{ item }}</li>
+		</ul>
+	</div>
+<hr>
 	<!-- Task 7 -->
-	<dvi id="app2">
-		
-	</dvi>
-
+	<div id="app2">
+		<input type="checkbox" value="HTML" v-model="arr">
+		<input type="checkbox" value="JS" v-model="arr">
+		<input type="checkbox" value="PHP" v-model="arr">
+		<input type="checkbox" value="SQL" v-model="arr">
+		<ul>
+			<li v-for="a in arr">{{ a }}</li>
+		</ul>
+	</div>
+<hr>
 	<!-- Task 8 -->
-	<dvi id="app3">
-		
-	</dvi>
-
+	<div id="app3">
+		<span>Русский</span><input name="radio" type="radio" v-model="type" value="ru">
+		<span>Английский</span><input name="radio" type="radio" v-model="type" value="en">
+		<span>Французкий</span><input name="radio" type="radio" v-model="type" value="fr">
+		<p>Выбраный язык: {{ type }}</p>
+	</div>
+<hr>
 	<!-- Task 11 -->
-	<dvi id="app4">
-		
-	</dvi>
+	<div id="app4">
+		<select v-model="selected">
+			<option v-for="option in options">{{ option }}</option>
+		</select>
+		<p>Вы выбрали: {{ selected }}</p>
+	</div>
 
 
 	<script src="vue.js"></script>
