--- a/Vue/lesson15/index.html
+++ b/Vue/lesson15/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 	
+	<div id="app">
+		<p v-bind:title="curentTime | parseTime | reverseTime">Текущая дата</p>
+	</div>
 
 	<script src="vue.js"></script>
 	<script src="script.js"></script>
