--- a/Vue/lesson18/index.html
+++ b/Vue/lesson18/index.html
@@ -5,7 +5,8 @@
 	<title>Document</title>
 </head>
 <body>
-
+	
+	<!-- Task 3 -->
 	<div id="app">
 		<a href="" v-on:click.prevent.keyCode.left="addTextLeft"
 				   v-on:click.prevent.keyCode.right="addTextRight"
