--- a/Vue/lesson13/index.html
+++ b/Vue/lesson13/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	
+	<!-- Task 3 -->
 	<div id="app">
 		<input type="checkbox" v-model="isActive" v-on:click="changeColor">
 		<p v-bind:style="{color: color1}">Какой-то текст</p>
