--- a/Vue/lesson15/index.html
+++ b/Vue/lesson15/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	
+	<!-- Task 8 -->
 	<div id="app">
 		<p v-bind:title="curentTime | parseTime | reverseTime">Текущая дата</p>
 	</div>
