--- a/OOP/lesson68/index.html
+++ b/OOP/lesson68/index.html
@@ -9,8 +9,12 @@
 
 	<!-- Task 7 -->
 	<canvas id="canvas" width="300" height="400"></canvas>
-	<button id="btn1">Покормить</button>
-	<button id="btn2">Ударить</button>
+	<div id="block_btn">
+		<button id="btn1">Покормить</button>
+		<button id="btn2">Ударить</button>
+		<button id="btn3">Сходить в туалет</button>
+	</div>
+	
 	<script src="main.js"></script>
 </body>
 </html>
