--- a/OOP/lesson68/index.html
+++ b/OOP/lesson68/index.html
@@ -12,7 +12,7 @@
 	<div id="block_btn">
 		<button id="btn1">Покормить</button>
 		<button id="btn2">Ударить</button>
-		<button id="btn3">Сходить в туалет</button>
+		<button id="btn3">Сходить в туалет или помыться</button>
 	</div>
 	
 	<script src="main.js"></script>
