--- a/OOP/lesson68/index.html
+++ b/OOP/lesson68/index.html
@@ -8,7 +8,10 @@
 <body>
 
 	<!-- Task 7 -->
-	<canvas id="canvas" width="300" height="400"></canvas>
+	<div id="block_canvas">
+		<p id="hp"></p>
+		<canvas id="canvas" width="300" height="400"></canvas>
+	</div>
 	<div id="block_btn">
 		<button id="btn1">Покормить</button>
 		<button id="btn2">Ударить</button>
