--- a/OOP/lesson68/index.html
+++ b/OOP/lesson68/index.html
@@ -9,6 +9,7 @@
 
 	<!-- Task 7 -->
 	<div id="block_canvas">
+		<h3 id="end"></h3>
 		<p id="hp"></p>
 		<canvas id="canvas" width="300" height="400"></canvas>
 	</div>
